# yt-dlp-web

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  template_setup.py
.github/workflows/: pythonapp.yml
